0.83.13
  - S3 XGA "BYTE SWP" fixed only to byte swap if the
    transfer is 16-bit wide. This fixes the dither
    pattern drawn by Windows 95/98 when you select
    "Shutdown" from the Start menu.
  - Mac OS X builds will prompt the user to select a
    folder at startup if run from the Finder (or from
    the root directory). The folder selected will then
    become the current working directory of DOSBox-X.
    This makes it possible to start DOSBox-X with a
    config file of your choice and to control where
    the capture, save states and other files go.
  - Fixed Tseng ET4000 640x480 256-color SVGA mode
    when using the ET4000.BIN VGA BIOS, or Windows 98.
  - Added segment limit checks in Normal core for
    MOVSB/MOVSW/MOVSD and STOSB/STOSW/STOSD, which is
    needed for DOSBox-X to work with the Windows 3.1
    S3 86C928 display drivers that use segment limit
    exceptions to fake a linear framebuffer.
  - Added S3 XGA "byte swap" emulation, needed for
    correct menu/titlebar display in Windows 3.1 when
    using the S3 86C928 driver.
  - Added YUV (YUY2) overlay to S3 Trio64V+ card
    emulation. Tested with XingMPEG under Windows 3.1
    and ActiveMovie under Windows 98.
  - Added machine types for 5 different variations of
    S3 chipset: Vision864, Vision868, Trio32, Trio64,
    and (experimental) Trio64V+, ViRGE, ViRGE/VX, and
    S3 86C928.
  - Removed second PCI BAR for S3 MMIO register space.
    S3 datasheets do not show a second BAR. Windows 95
    is perfectly happy without it.
  - S3 SVGA XGA emulation BlitRect now supports
    COLOR_CMP. DirectX-based Windows 95 games are now
    able to blit in 256-color mode with a transparent
    color key value.
  - ANSI.SYS emulaion now supports the "Device Status
    Report" escape when asked through code 6 (report
    cursor position)
  - Fixed RAM mapping bugs related to MDA/CGA/Hercules
    emulation and the "allow more than 640kb" option,
    that failed to map RAM as expected, and because of